<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                android:paddingRight="3dp"
                android:paddingLeft="3dp"
                android:background="@color/lightdark">

    <LinearLayout android:id="@+id/tweetview"
                  android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">
        <ImageView android:id="@+id/avatar"
                   android:layout_height="45dp"
                   android:layout_width="45dp"
                   android:layout_margin="6dp"/>

        <LinearLayout android:orientation="vertical"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content">
            <LinearLayout android:id="@+id/top"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:divider="@color/transparent">
                <TextView android:id="@+id/name"
                          android:layout_marginRight="7dp"
                          android:text="@string/name"
                          android:textColor="@color/cachecolor"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"/>
                <TextView android:id="@+id/username"
                          android:text="@string/uname"
                          android:singleLine="true"
                          android:textColor="@color/lightgray"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"/>
            </LinearLayout>

            <TextView android:id="@+id/tweet"
                      android:singleLine="false"
                      android:textColor="@color/white"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/default_body"/>

            <ImageView android:id="@+id/tweet_img"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout android:id="@+id/bottom"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_below="@+id/tweetview"
                  android:divider="@color/transparent">

        <TextView android:id="@+id/dateTime"
                  android:gravity="end"
                  android:text="@string/date"
                  android:textColor="@color/date_color"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"/>

    </LinearLayout>

</RelativeLayout>