<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.streamdataio.stocktwits.DetailView"
    android:background="@color/lightdark"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

    <LinearLayout android:id="@+id/top"
                  android:layout_marginTop="5dp"
                  android:layout_marginLeft="5dp"
                  android:layout_marginRight="5dp"
                  android:layout_marginBottom="10dp"
                  android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content">
        <ImageView android:id="@+id/avatar"
                   android:layout_marginRight="5dp"
                   android:layout_width="75dp"
                   android:layout_height="75dp"/>


        <LinearLayout android:id="@+id/info"
                      android:orientation="vertical"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:id="@+id/name"
                          android:text="@string/name"
                          android:layout_marginRight="7dp"
                          android:textColor="@color/cachecolor"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"/>

                <TextView android:id="@+id/username"
                          android:text="@string/uname"
                          android:textColor="@color/lightgray"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"/>

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:id="@+id/location"
                          android:textColor="@color/white"
                          android:text="@string/location"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"/>

                <TextView android:id="@+id/followers"
                          android:textColor="@color/white"
                          android:gravity="end"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"/>

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:id="@+id/ideas"
                          android:textColor="@color/white"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"/>


                <TextView android:id="@+id/following"
                          android:textColor="@color/white"
                          android:gravity="end"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                          android:orientation="horizontal"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content">
                <TextView android:id="@+id/identity"
                          android:textColor="@color/white"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"/>
                <TextView android:id="@+id/joined"
                          android:text="@string/date"
                          android:layout_marginLeft="5dp"
                          android:textColor="@color/lightgray"
                          android:gravity="end"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout android:id="@+id/data"
                  android:layout_below="@+id/top"
                  android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/experience"
              android:textColor="@color/lightgray"
                  android:layout_marginLeft="5dp"
                  android:text="@string/exp"
              android:layout_marginRight="3dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>
        <View
            android:layout_height="match_parent"
            android:layout_width="1dp"
            android:background="@color/gray" />

        <TextView android:id="@+id/holding_period"
              android:textColor="@color/lightgray"
                  android:text="@string/h_p"
                  android:layout_marginLeft="3dp"
              android:layout_marginRight="3dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>
        <View
            android:layout_height="match_parent"
            android:layout_width="1dp"
            android:background="@color/gray" />

        <TextView android:id="@+id/approach"
              android:textColor="@color/lightgray"
                  android:text="@string/approach"
                  android:layout_marginLeft="3dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>
    </LinearLayout>


    <TextView android:id="@+id/bio"
              android:layout_below="@+id/data"
              android:layout_marginLeft="5dp"
              android:layout_marginRight="7dp"
              android:layout_marginBottom="5dp"
              android:singleLine="false"
              android:textColor="@color/white"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <TextView android:id="@+id/website"
              android:textColor="@color/lightgray"
              android:layout_below="@+id/bio"
              android:layout_marginLeft="5dp"
              android:layout_marginBottom="5dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <View android:id="@+id/line"
          android:layout_below="@+id/website"
          android:layout_marginBottom="7dp"
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/gold"/>

    <TextView android:id="@+id/dateTime"
              android:layout_below="@+id/line"
              android:gravity="end"
              android:text="@string/date"
              android:textColor="@color/date_color"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <TextView android:id="@+id/text"
              android:layout_below="@+id/dateTime"
              android:layout_marginLeft="7dp"
              android:layout_marginRight="7dp"
              android:layout_marginBottom="5dp"
              android:singleLine="false"
              android:textColor="@color/white"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/default_body"/>

    <ImageView android:id="@+id/pic"
               android:layout_below="@+id/text"
               android:layout_marginBottom="5dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>



</RelativeLayout>
</ScrollView>